--- a/index.html
+++ b/index.html
@@ -8,47 +8,45 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <img src="/assets/odin-lined.png" alt="The Odin Project &copy; Logo">
-    <p>Photo by 
-      <a href="https://unsplash.com/@withluke?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Luke Stackpoole</a> on 
-      <a href="https://unsplash.com/photos/5Qqkjn4PFPA"></a>
-    </p>
-  </div>
-  <div class="container form">
-    <p>This is not a real online service! You know you need something like this in you life to help you realize your deepest dreams/</p>
-    <p>You <em>know</em> you want to.</p>
-    <form action="/" method="post">
-      <h2>Let's do this!</h2>
-      <div class="fieldinput">
-        <div class="input">
-          <label for="fname">First Name</label>
-          <input id="fname" type="text" name="fname" placeholder="e.g John" minlength="3" maxlength="20" required>
+  <main>
+    <section class="left-col">
+        <div class="logo-container">
+            <img class="logo-img" src="./assets/odin-lined.png"/>
+            <h1 class="logo">Odin Form <span>&copy;<span></h1>
         </div>
-        <div class="input">
-          <label for="lname">Last Name</label>
-          <input id="lname" type="text" name="lname" placeholder="e.g Doe" minlength="3" maxlength="20" required>
+    </section>
+    <section class="right-col">
+        <div class="form-container">    
+            <form>
+                <div class="input-box">
+                    <label for="firstname">First Name</label>
+                    <input type="text" id="firstname">
+                </div>
+                <div class="input-box">
+                    <label for="lastname">Last Name</label>
+                    <input type="text" id="lastname">
+                </div>
+                <div class="input-box">
+                    <label for="email">Email</label>
+                    <input type="email" id="email">
+                </div>
+                <div class="input-box">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone">
+                </div>
+                <div class="input-box">
+                    <label for="password">Password</label>
+                    <input type="password" id="password">
+                </div>
+                <div class="input-box">
+                    <label for="confirm-password">Confirm Password</label>
+                    <input type="password" id="confirm-password">
+                </div>
+                <button class="btn" onclick="e => e.preventDefault()">Create Account</button>
+                <p class="login">Already have an account? <a href="/">Log in</a></p>
+            </form>
         </div>
-        <div class="input">
-          <label for="email">Email</label>
-          <input id="email" type="email" name="email" placeholder="e.g xyz@email.com" required>
-        </div>
-        <div class="input">
-          <label for="phone">Phone Number</label>
-          <input id="phone" type="phone" name="phone" pattern="\d{3}[\-]\d{3}[\-]\d{4}" title="Please enter a valid phone number" required>
-        </div>
-        <div class="input">
-          <label for="password">Password</label>
-          <input id="password" type="password" name="password" min="6" value="+" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required>
-        </div>
-        <div class="input">
-          <label for="confirm">Confirm Password</label>
-          <input id="confirm" type="password" min="6" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required>
-        </div>
-      </div>
-      <button>Create Account</button>
-      <p class="login">Already have an account? <a href="/">Log in</a></p>
-    </form>
-  </div>
+    </section>
+</main>
 </body>
 </html>
